apps/media/bazaar/deployment.yaml
#
# Reference:
# https://docs.linuxserver.io/images/docker-bazarr/
# https://github.com/morpheus65535/bazarr
#

apiVersion: v1
kind: Service
metadata:
  name: bazarr
  namespace: media
  labels:
    app.kubernetes.io/component: service
    app.kubernetes.io/name: bazarr
spec:
  selector:
    app.kubernetes.io/component: app
    app.kubernetes.io/name: bazarr
  type: ClusterIP
  ports:
    - name: http
      port: 6767
      protocol: TCP
      targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
  namespace: media
  labels:
    app.kubernetes.io/component: app
    app.kubernetes.io/name: bazarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/component: app
      app.kubernetes.io/name: bazarr
  template:
    metadata:
      labels:
        app.kubernetes.io/component: app
        app.kubernetes.io/name: bazarr
    spec:
      restartPolicy: Always
      affinity:
      nodeAffinity:
        requiredDuringSchedulingIgnoredDuringExecution:
          nodeSelectorTerms:
            - matchExpressions:
                - key: kubernetes.io/hostname
                  operator: In
                  values:
                    - minas-tirith
                    - minas-tirith-vm
      containers:
        - name: bazarr
          image: lscr.io/linuxserver/bazarr:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 6767
              protocol: TCP
          volumeMounts:
            - name: bazarr-pvc
              mountPath: /config
            - name: media-data-pvc
              mountPath: /movies
              subPath: movies
            - name: media-data-pvc
              mountPath: /tv
              subPath: tv
      volumes:
        - name: bazarr-pvc
          persistentVolumeClaim:
            claimName: bazarr-pvc
        - name: media-data-pvc
          persistentVolumeClaim:
            claimName: media-data-pvc
